fixed double scroll bar issue. removed margin from body

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,11 @@
 /* importing fonts from google */
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Parisienne');
 
+/* fixes double scroll bar issue */
+body {
+  margin: 0;
+}
+
 
  /* turns the names section of the constitution into 3 columns */
 #limheight {
@@ -17,10 +22,6 @@
     display: inline-block; 
 }
 
-/* removes the bottom margin from h2's so the back to top link doesn't stick out as much */
-h3 {
-  margin-bottom: -1.25rem;
-}
 
 #GeorgeWash {
   text-align: center;
@@ -142,7 +143,7 @@ nav ul li:hover > ul {
     /* The scaling of the images would add a horizontal scrollbar, so disable x overflow. */
     overflow-x: hidden;
     /* Enable scrolling on the page. */
-    /* overflow-y: auto; */
+    overflow-y: auto;
     /* perspective of objects compared to viewport */
     perspective: 2px;
   }
@@ -153,6 +154,7 @@ nav ul li:hover > ul {
     height: 100vh;
   }
 
+  
   .parallax::after {
     /* Display and position the pseudo-element, need content or the pictures won't show */
     content: " ";
